scss/common/_reply.scss
.composer-popup {
  border-radius: $modal-border-radius;
  box-shadow: $modal-box-shadow;
  padding: $modal-padding-y $modal-padding-x;
  top: ($material-icon-size + $spacer * 2);
  bottom: ($btn-height + $card-padding-y + $spacer);

  a {
    &.close {
      color: color-chooser($white-secondary, $black-secondary);
      float: right;
      font-size: $font-size-base;
      opacity: 1;
      position: relative;
      top: (($font-size-h3 * $line-height-h3 - $font-size-h3) / 2);
      right: 0;

      @include active-focus-hover {
        color: color-chooser($white-primary, $black-primary);
      }

      &::before {
        display: none;
      }
    }
  }

  > :last-child {
    margin-bottom: 0;
  }
}

#reply-control {
  background-color: color-chooser($modal-bg-dark, $modal-bg-light);
  border-radius: ($modal-border-radius * 2) ($modal-border-radius * 2) 0 0;
  box-shadow: $modal-box-shadow;

  &.closed {
    display: none;
  }

  &.draft {
    background-color: color-chooser($modal-bg-light, $modal-bg-dark);
    color: color-chooser($black-secondary, $white-secondary);
    height: ($material-icon-size + $spacer) !important;
    left: auto;
    width: auto;

    .composer-controls {
      margin-right: $card-padding-x;
      padding-right: 0;
    }

    .draft-text {
      color: inherit;
      line-height: $material-icon-size;
      margin-right: $card-inner-spacer-x;
      margin-left: $card-padding-x;
      padding-left: 0;

      @include focus-hover {
        color: color-chooser($black-primary, $white-primary);
      }

      &:active {
        color: color-chooser($black-primary, $white-primary);
      }
    }

    .span24 {
      display: block;
      float: none;
      width: auto;
    }
  }

  &.edit-title {
    .contents {
      input {
        &#reply-title {
          border: 0;
          height: auto;
          margin: 0;
          padding: $card-padding-y $card-padding-x;

          @include focus-hover {
            padding-bottom: $card-padding-y;
          }
        }
      }
    }
  }

  &.fullscreen {
    max-width: 100%;
    right: 0;

    &.show-preview {
      .d-editor-textarea-wrapper {
        .fullscreen-composer & {
          border-right: 0;
        }
      }
    }

    .d-editor-preview-wrapper {
      .fullscreen-composer & {
        margin-top: 0;
      }
    }

    .grippie {
      border-radius: 0;
      display: flex;
      flex-shrink: 0;
    }

    .reply-to {
      .fullscreen-composer & {
        border-bottom: 0;
        padding-bottom: 0;
      }
    }
  }

  &.hide-preview .toggle-preview::before {
    content: 'keyboard_arrow_left';
  }

  &.open .grippie {
    display: flex;
    flex-shrink: 0;
  }

  &.saving {
    .grippie {
      display: none;
    }

    .spinner {
      height: ($font-size-base * $line-height-base);
      margin: 0 0 0 ($card-inner-spacer-x / 2);
      vertical-align: middle;
      width: ($font-size-base * $line-height-base);
    }
  }

  .add-warning {
    margin-right: $card-padding-x;
    margin-left: 0;
    position: static;
    width: auto;

    input[type='checkbox'] {
      margin-right: $spacer-xs;
    }

    label {
      margin-bottom: 0;
    }
  }

  .category-input {
    margin: 0 $card-inner-spacer-x ($card-inner-spacer-y / 2) 0;
  }

  .composer-bottom-right {
    flex-basis: auto;
    flex-shrink: 0;
  }

  .composer-controls .btn-flat,
  .toggle-toolbar,
  .toggler {
    background-color: transparent !important;
    color: color-chooser($black-secondary, $white-secondary);
    font-size: inherit;
    height: $material-icon-size;
    margin-left: $card-inner-spacer-x;
    padding: 0 !important;
    width: $material-icon-size;

    @include focus-hover {
      color: color-chooser($black-primary, $white-primary);
    }

    &:active {
      color: color-chooser($black-primary, $white-primary);
    }
  }

  .composer-fields {
    align-items: center;
    display: flex;
    flex-shrink: 0;
    flex-wrap: wrap;
  }

  .control-row {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    margin: 0;

    &.reply-area {
      padding: 0;
    }
  }

  .d-editor {
    display: flex;
  }

  .d-editor-button-bar {
    .btn {
      font-size: $btn-font-size-sm;
      padding: $btn-padding-y-sm $card-inner-spacer-x;
    }

    .select-kit-body {
      border-radius: $modal-border-radius;
    }

    .select-kit-header {
      background-color: transparent;
      box-shadow: none;
      font-size: $btn-font-size-sm;
      height: auto;
      padding: $btn-padding-y-sm $card-inner-spacer-x;

      &.is-focused {
        background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
      }
    }
  }

  .d-editor-preview {
    border: 0;
    border-left: 1px solid color-chooser($white-divider, $black-divider);
    border-radius: 0;

    img:not(.avatar):not(.emoji):not(.site-icon):not(.thumbnail) {
      height: auto;
      width: 100%;
    }
  }

  .d-editor-preview-wrapper {
    margin-left: 0;
    max-width: 50%;
  }

  .d-editor-textarea-wrapper {
    background-color: transparent;
    border: 0;
    border-radius: 0;
  }

  .dropdown-select-box {
    height: auto;
  }

  #edit-reason {
    background-color: color-chooser($black-divider, $white-divider);
    border-bottom: 0;
    display: inline-block;
    font-size: $font-size-small;
    height: ($font-size-base * $line-height-base);
    margin: 0 0 0 ($card-inner-spacer-x / 2);
    padding: 0 ($card-inner-spacer-x / 2);
    width: auto;
  }

  .grippie {
    align-items: center;
    background-color: color-chooser($modal-bg-light, $modal-bg-dark);
    color: color-chooser($black-secondary, $white-secondary);
    flex-shrink: 0;
    height: ($material-icon-size + $spacer);
    justify-content: center;
    padding: 0;

    @media (min-width: ($container-max-width + 1)) {
      border-radius: $modal-border-radius $modal-border-radius 0 0;
    }

    &::before {
      @extend %material-icons;

      border: 0;
      content: 'drag_handle';
    }
  }

  .mini-tag-chooser {
    background-color: transparent;
    margin: 0 $card-inner-spacer-x ($card-inner-spacer-y / 2) 0;
  }

  .popup-menu {
    @extend %dropdown-menu-sm;

    h3 {
      @extend %dropdown-header-sm;
    }

    .btn {
      @extend %dropdown-link-sm;
    }
  }

  .reply-area {
    height: 100%;
    margin: 0;
    padding: 0;

    .ac-wrap {
      margin-right: $card-padding-x;
    }
  }

  #reply-title {
    margin: 0;
  }

  .reply-to {
    color: color-chooser($black-secondary, $white-secondary);
    margin: 0;

    a,
    button,
    i,
    .d-icon {
      color: inherit;
    }

    .action-title {
      line-height: $material-icon-size;
      min-width: 0;
    }

    .avatar {
      margin-right: $spacer-xs;
      margin-left: $spacer-xs;
    }

    .btn {
      background-color: transparent !important;
      border: 0;
      box-shadow: none;
      height: $material-icon-size;
      margin-right: $spacer-xs;
      min-height: 0;

      @include focus-hover {
        color: color-chooser($black-primary, $white-primary);
      }

      &:active,
      &.is-focused {
        color: color-chooser($black-primary, $white-primary);
      }
    }

    .composer-action-title {
      img {
        &.avatar {
          margin-right: $spacer-xs;
        }
      }

      .avatar {
        vertical-align: bottom;
      }

      .d-icon,
      .user-link {
        margin-right: 0;
      }

      .topic-link {
        margin-right: 0;

        @include focus-hover {
          color: color-chooser($black-primary, $white-primary);
        }

        &:focus {
          outline: 0;
        }
      }
    }

    .composer-controls {
      margin-right: 0;
      position: absolute;
      top: ($spacer / 2);
      right: $card-padding-x;
    }

    .d-icon {
      border: 0;
      padding: 0;
    }

    .reply-details {
      max-width: calc(50% - #{$material-icon-size / 2 + $card-inner-spacer-x + $card-padding-x});
      position: absolute;
      top: ($spacer / 2);
      left: $card-padding-x;

      .d-icon {
        opacity: 1;
      }

      .select-kit-body {
        border-radius: $dropdown-border-radius;
      }
    }
  }

  .save-or-cancel {
    flex-grow: 1;

    #draft-status {
      color: unquote('$tertiary');
      margin-left: $card-inner-spacer-x;

      &:empty {
        display: none;
      }
    }
  }

  .submit-panel {
    border-top: 1px solid color-chooser($white-divider, $black-divider);
    margin: 0;
    padding: ($card-padding-y / 2) $card-padding-x;

    .cancel {
      @extend %btn-base;
      @extend %btn-flat;

      margin-left: $card-inner-spacer-x;
    }
  }

  .title-and-category {
    margin-top: ($card-inner-spacer-y / 2);
    margin-bottom: 0;
    padding-right: $card-inner-spacer-x;
    padding-left: $card-padding-x;
  }

  .title-input {
    margin: 0 $card-inner-spacer-x ($card-inner-spacer-y / 2) 0;
  }

  .toggle-preview {
    @extend %btn-base;
    @extend %btn-flat;

    margin-right: ($card-inner-spacer-x * -1);
    overflow: hidden;
    padding-right: $card-inner-spacer-x;
    padding-left: $card-inner-spacer-x;
    text-indent: 100%;
    width: ($card-inner-spacer-x * 2 + $material-icon-size);

    &::before {
      @extend %material-icons;

      align-items: center;
      content: 'keyboard_arrow_right';
      display: flex;
      justify-content: center;
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      text-indent: 0;
    }
  }

  .user-selector {
    margin-top: ($card-inner-spacer-y / 2);
    margin-bottom: ($card-inner-spacer-y / 2);
    padding-left: $card-padding-x;

    .ac-wrap {
      background-color: transparent;
      border-top: 0;
      border-right: 0;
      border-left: 0;
      border-radius: 0;
      min-height: $text-field-height;
      padding: 0 $text-field-padding-x;

      @include focus-hover {
        border-width: $text-field-border-width;
        box-shadow: inset 0 ($text-field-border-width * -2) 0 ($text-field-border-width * -1) color-chooser($text-field-border-color-dark, $text-field-border-color-light);
      }

      input[type='text'] {
        margin-top: $text-field-padding-y;
        margin-bottom: ($text-field-padding-y - $text-field-border-width);
      }

      .item {
        margin-top: 0;
        margin-bottom: ($text-field-height - $text-field-border-width - $chip-height);
      }
    }

    .add-warning {
      margin-bottom: 0;
    }
  }
}

